# kagi-mcp

./: .gitignore  CHANGELOG.md  Cargo.toml  LICENSE  README.md
.github/workflows/: ci.yml
.workflow/kagi-request-privacy-mode/: final-report.md  orchestration.md  plan.md  state.json
.workflow/kagi-request-privacy-mode/packets/: p1-discovery.md  p2-implementation.md
.workflow/kagi-request-privacy-mode/results/: p1-discovery.md  p2-implementation.md
.workflow/safe-browser-session-request-mode/: final-report.md  orchestration.md  plan.md  state.json
src/: main.rs
