[package]
name = "kagi-mcp"
version = "0.1.0"
edition = "2024"
description = "Tiny MCP server built on top of kagi-cli"
license = "MIT"
publish = false
readme = "README.md"

[dependencies]
rmcp = { version = "1.2.0", features = ["server", "macros", "transport-io", "schemars"] }
schemars = "1.2"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
thiserror = "2.0"
tokio = { version = "1.44", features = ["io-std", "macros", "process", "rt-multi-thread", "time"] }
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter", "fmt", "std"] }

[dev-dependencies]
tempfile = "3.20"
